Add pre/post version scripts

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "license": "MIT",
     "bin": "cli.js",
     "scripts": {
+        "preversion": "yarn lint",
+        "postversion": "yarn publish",
         "lint": "standard --fix",
         "test": "npm run lint && jest"
     },
